Fixed styling for images --fixed alignment issues for images --added image search

--- a/style.scss
+++ b/style.scss
@@ -1,24 +1,133 @@
-nav {
-    width: auto;
-    display: flex;
-    ul {
-        list-style-type: none;
+@import url('http://fonts.cdnfonts.com/css/product-sans');
+body {
+    font-family: 'Product Sans', sans-serif;
+    nav {
+        width: auto;
         display: flex;
-        width: 100%;
-        justify-content: end;
+        ul {
+            list-style-type: none;
+            display: flex;
+            width: 100%;
+            justify-content: end;
 
-        li {
-            list-style: none;
-            padding: 10px;
-            a {
-                display: block;
-                color: black;
-                text-align: center;
-                text-decoration: none;
+            li {
+                list-style: none;
+                padding: 10px;
+                a {
+                    display: block;
+                    color: black;
+                    text-align: center;
+                    text-decoration: none;
+                }
+                a:hover {
+                    text-decoration: underline;
+                }
             }
-            a:hover {
-                text-decoration: underline;
-            }
+        }
+    }
+    #cs50oogle {
+        // text-align: center;
+        font-size: 0px;
+        font-weight: 700;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        height: 25vh;
+        margin: 40px;
+        font {
+            font-size: 70px;
+            opacity: 80%;
+        }
+        p {
+            display: flex;
+            justify-content: center;
+            font-size: small;
+            margin: 10px;
+            align-items: flex-end;
+        }
+    }
+    input[type=text]{
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+         border-radius: 20px;
+        width: 573px;
+        height: 24px;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid lightgrey;
+        padding: 10px;
+        &:hover {
+        border: 1px solid #b2b2b2;
+        }
+        &:focus {
+            border: 1px solid #4285f4;
+            -webkit-appearance: none;
+        }
+    }
+
+    .buttons{
+        padding: 20px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    input[type=submit]{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f2f2f2;
+        color: #757575;
+        font-size: 13px;
+        font-weight: bold;
+        height: 36px;
+        margin: 0px 4px;
+        padding: 0px 16px;
+        border: solid;
+        border-radius: 2px;
+        border-width: 1px;
+        border-color: #f2f2f2;
+        margin: 10px;
+        &:hover{
+            border-style: solid;
+            border-radius: 2px;
+            border-width: 1px;
+            border-color: rgb(198, 198, 198);
+            color: rgb(34, 34, 34);
+            background-color: rgb(248, 248, 248);
+            cursor: pointer;
+        }
+        &:focus {
+            border: 1px solid #4285f4;
+            -webkit-appearance: none;
+        }
+    }
+    button{
+        background-color: #f2f2f2;
+        color: #757575;
+        font-size: 13px;
+        font-weight: bold;
+        height: 36px;
+        margin: 0px 4px;
+        padding: 0px 16px;
+        border: solid;
+        border-radius: 2px;
+        border-width: 1px;
+        border-color: #f2f2f2;
+        margin: 10px;
+        &:hover{
+            border-style: solid;
+            border-radius: 2px;
+            border-width: 1px;
+            border-color: rgb(198, 198, 198);
+            color: rgb(34, 34, 34);
+            background-color: rgb(248, 248, 248);
+            cursor: pointer;
+        }
+        &:focus {
+            border: 1px solid #4285f4;
+            -webkit-appearance: none;
         }
     }
 }
